force-app/main/default/objects/AVA_BLNG__Order_Line_Tax_Breakup__c/AVA_BLNG__Order_Line_Tax_Breakup__c.object-meta.xml
<CustomObject>
    <label>Order Line Tax Breakup</label>
    <nameField>
        <displayFormat>LB-{00}</displayFormat>
        <label>Order Line Tax Breakup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Line Tax Breakups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>