force-app/main/default/objects/AVA_BLNG__Order_Line_Tax_Breakup__c/fields/AVA_BLNG__Juris_Name__c.field-meta.xml
<CustomField>
    <fullName>AVA_BLNG__Juris_Name__c</fullName>
    <label>Jurisdiction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>