force-app/main/default/objects/AVA_BLNG__Order_Line_Tax_Breakup__c/fields/AVA_BLNG__Non_Taxable__c.field-meta.xml
<CustomField>
    <fullName>AVA_BLNG__Non_Taxable__c</fullName>
    <label>Non-Taxable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>