force-app/main/default/objects/AVA_BLNG__Order_Line_Tax_Breakup__c/fields/AVA_BLNG__Order_Item__c.field-meta.xml
<CustomField>
    <fullName>AVA_BLNG__Order_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Item</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Order Line Tax Breakups</relationshipLabel>
    <relationshipName>Order_Line_Tax_Breakups</relationshipName>
    <type>Lookup</type>
</CustomField>