force-app/main/default/objects/AVA_BLNG__Order_Line_Tax_Breakup__c/fields/AVA_BLNG__Rate__c.field-meta.xml
<CustomField>
    <fullName>AVA_BLNG__Rate__c</fullName>
    <label>Rate %</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>