force-app/main/default/objects/AVA_BLNG__Order_Line_Tax_Breakup__c/listViews/AVA_BLNG__All.listView-meta.xml
<ListView>
    <fullName>AVA_BLNG__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>